--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,9 @@ Brotli
 certifi
 charset-normalizer
 click
-Flask
+Flask~=3.1.0
 Flask-CKEditor==1.0.0
-Flask-Login
+Flask-Login~=0.6.3
 Flask-SQLAlchemy
 Flask-WTF
 greenlet
@@ -19,9 +19,9 @@ PySocks
 requests
 six==1.16.0
 SQLAlchemy
-stripe
+stripe~=11.2.0
 typing_extensions
 urllib3
 webencodings==0.5.1
-Werkzeug
-WTForms
+Werkzeug~=3.1.3
+WTForms~=3.2.1
